# diffcar

./: .gitignore  CHANGELOG.md  LICENSE  README.md  cabal.project.freeze  diffcar.cabal  diffdir.sh
app/: Car.hs  Main.hs  OuterMain.hs  Print.hs  Report.hs  Resources.hs  Single.hs
config/: cabal.project.freeze.linux.0.1.0.0  cabal.project.freeze.windows.0.1.0.0
data/: CARLWZR.RES  CARZGT3.RES  Carcc08.res  carPMIN-bb90.res  carcc09.res
