cabal-version:      3.0
name:               diffcar
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             Daniel Mlot
maintainer:         duplode_1@yahoo.com.br
-- copyright:
category:           Game
build-type:         Simple
-- extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable diffcar
    import:           warnings
    main-is:          Main.hs
    other-modules:    Resources
                    , Car
    -- other-extensions:
    build-depends:    base ^>=4.17.0.0
                    , containers
                    , bytestring
                    , binary
    hs-source-dirs:   app
    default-language: Haskell2010
