cabal-version:      3.0
name:               diffcar
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             Daniel Mlot
maintainer:         duplode_1@yahoo.com.br
-- copyright:
category:           Game
build-type:         Simple
-- extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable diffcar
    import:           warnings
    main-is:          OuterMain.hs
    other-modules:    Resources
                    , Car
                    , Single
    -- other-extensions:
    build-depends:    base ^>=4.17.0.0
                    , containers
                    , bytestring
                    , binary
                    , portray
                    , portray-diff
                    , portray-prettyprinter
                    , prettyprinter
                    , wrapped
                    , text
                    , optparse-applicative
                    , directory
                    , filepath
                    , selective
    hs-source-dirs:   app
    default-language: Haskell2010
