cabal-version:      3.0
name:               diffcar
version:            0.1.0.0
synopsis:           Take Stunts-aware diffs of CAR*.RES files.
description:        Take Stunts-aware diffs of CAR*.RES files.
license:            MIT
license-file:       LICENSE
author:             Daniel Mlot
maintainer:         duplode_1@yahoo.com.br
copyright:          (c) 2023-2024 Daniel Mlot
category:           Game
build-type:         Simple
-- extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable diffcar
    import:           warnings
    main-is:          Main.hs
    other-modules:    Paths_diffcar
                    , Resources
                    , Car
                    , Single
                    , Print
                    , Report
    -- other-extensions:
    build-depends:    base >= 4.17 && < 4.19
                    , containers
                    , bytestring
                    , binary
                    , portray
                    , portray-diff
                    , portray-prettyprinter
                    , prettyprinter
                    , ansi-terminal >= 1.0.2
                    , wrapped
                    , text
                    , optparse-applicative
                    , directory
                    , filepath
                    , selective
    hs-source-dirs:   app
    default-language: Haskell2010
